--- a/_toc.yml
+++ b/_toc.yml
@@ -8,5 +8,8 @@ chapters:
 - file: pages/Problema_B2_4
 - file: pages/Problema_B2_6
 - file: pages/Problema_B4_4
+- file: pages/Problema_B4_5
+- file: pages/Problema_B4_7
+- file: pages/Parcial_2425
 
  
