--- a/_toc.yml
+++ b/_toc.yml
@@ -10,6 +10,8 @@ chapters:
 - file: pages/Problema_B4_4
 - file: pages/Problema_B4_5
 - file: pages/Problema_B4_7
+- file: pages/Problema_B5_4
+- file: pages/Problema_B5_5
 - file: pages/Parcial_2425
 
  
