--- a/_toc.yml
+++ b/_toc.yml
@@ -15,6 +15,9 @@ parts:
   - file: pages/Problema_B1_S1_4
   - file: pages/Problema_B1_S2_1
   - file: pages/Problema_B1_S2_2
+  - file: pages/Problema_B2_S3_1
+  - file: pages/Problema_B2_S3_2
+# - file: pages/Problema_B2_S3_3
 # - file: pages/Problema_B2_3
 # - file: pages/Problema_B2_4
 # - file: pages/Problema_B2_6
