--- a/_toc.yml
+++ b/_toc.yml
@@ -22,7 +22,10 @@ parts:
   - file: pages/Problema_B2_S3_1
   - file: pages/Problema_B2_S3_2
   - file: pages/Problema_B2_S3_3
-# - file: pages/Problema_B2_4
+- caption: Seminario 4 - Imágenes, Cargas distribuidos
+  chapters:
+  - file: pages/Problema_B2_S4_1
+  - file: pages/Problema_B2_S4_2
 # - file: pages/Problema_B2_6
 # - file: pages/Problema_B4_4
 # - file: pages/Problema_B4_5
