--- a/_toc.yml
+++ b/_toc.yml
@@ -26,6 +26,7 @@ parts:
   chapters:
   - file: pages/Problema_B2_S4_1
   - file: pages/Problema_B2_S4_2
+  - file: pages/Propuesto_B2_S4_1
 - caption: Seminario 5 - Separación de variables, Esferas de carga
   chapters:
   - file: pages/Problema_B2_S5_1
